<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.2</version>
    <relativePath/>
  </parent>

  <groupId>cm.xenonbyte.farmbyte</groupId>
  <artifactId>farm-byte-service</artifactId>
  <version>1.0-SNAPSHOT</version>

  <packaging>pom</packaging>

  <properties>
    <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
    <jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
    <openapi-generator-maven-plugin.version>7.7.0</openapi-generator-maven-plugin.version>
    <swagger-annotations-jakarta.version>2.2.21</swagger-annotations-jakarta.version>
    <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
    <junit-jupiter.version>5.10.2</junit-jupiter.version>
    <assertj-core.version>3.25.3</assertj-core.version>
    <java.version>21</java.version>
    <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
    <maven-failsafe-plugin.version>3.3.1</maven-failsafe-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <modules>
    <module>common</module>
    <module>catalog</module>
    <module>bootstrap</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>common-domain</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>common-adapter-file-storage</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>common-adapter-data-access-jpa</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>common-adapter-rest-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>common-resource</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>catalog-domain-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>catalog-adapter-data-access-jpa</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>catalog-adapter-data-access-inmemory</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>catalog-adapter-data-access-test</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cm.xenonbyte.farmbyte</groupId>
        <artifactId>catalog-adapter-rest-api</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>${org.mapstruct.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.gmavenplus</groupId>
        <artifactId>gmavenplus-plugin</artifactId>
        <version>1.13.1</version>
        <executions>
          <execution>
            <goals>
              <goal>addSources</goal>
              <goal>addTestSources</goal>
              <goal>generateStubs</goal>
              <goal>compile</goal>
              <goal>generateTestStubs</goal>
              <goal>compileTests</goal>
              <goal>removeStubs</goal>
              <goal>removeTestStubs</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <excludes>
            <exclude>**/*IT.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
        <configuration>
          <excludes>
            <exclude>**/*Test.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>jacoco-initialize</id>
            <phase>process-resources</phase>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-site</id>
            <phase>post-integration-test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
